--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react-dom": "^18.2.0",
     "react-icons": "^5.0.1",
     "react-router-dom": "^6.22.3",
+    "react-scripts": "5.0.1",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
@@ -42,7 +43,6 @@
     ]
   },
   "devDependencies": {
-    "react-scripts": "^5.0.1",
     "sass": "^1.71.1"
   }
 }
